--- a/SCII/sciimainwindow.ui
+++ b/SCII/sciimainwindow.ui
@@ -6,60 +6,126 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1000</width>
-    <height>700</height>
+    <width>1127</width>
+    <height>735</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Vespa Labs - Scooter Computer II</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QWidget" name="verticalLayoutWidget">
+   <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>280</y>
-      <width>361</width>
-      <height>141</height>
+      <x>100</x>
+      <y>10</y>
+      <width>661</width>
+      <height>661</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
-      <widget class="QLCDNumber" name="lcdNumber">
-       <property name="smallDecimalPoint">
-        <bool>false</bool>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="autoFillBackground">
+     <bool>true</bool>
+    </property>
+    <property name="tabPosition">
+     <enum>QTabWidget::East</enum>
+    </property>
+    <property name="tabShape">
+     <enum>QTabWidget::Triangular</enum>
+    </property>
+    <property name="currentIndex">
+     <number>0</number>
+    </property>
+    <widget class="QWidget" name="ScootTab">
+     <attribute name="title">
+      <string>Scoot</string>
+     </attribute>
+     <widget class="QWidget" name="gridLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>-10</x>
+        <y>0</y>
+        <width>651</width>
+        <height>661</height>
+       </rect>
+      </property>
+      <layout class="QGridLayout" name="gridLayout">
+       <property name="sizeConstraint">
+        <enum>QLayout::SetMaximumSize</enum>
        </property>
-       <property name="numDigits">
-        <number>8</number>
-       </property>
-       <property name="segmentStyle">
-        <enum>QLCDNumber::Flat</enum>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QtSvgDialGauge" name="svgSpeedometer" native="true">
-    <property name="geometry">
-     <rect>
-      <x>390</x>
-      <y>100</y>
-      <width>651</width>
-      <height>581</height>
-     </rect>
-    </property>
-    <property name="toolTip">
-     <string>An SVG button widget.</string>
-    </property>
-    <property name="whatsThis">
-     <string>An SVG button widget.</string>
-    </property>
-    <property name="skin" stdset="0">
-     <string>Tachometer</string>
-    </property>
-    <property name="maximum" stdset="0">
-     <number>10</number>
-    </property>
+       <item row="1" column="1">
+        <widget class="QLCDNumber" name="lcdNumber">
+         <property name="smallDecimalPoint">
+          <bool>false</bool>
+         </property>
+         <property name="numDigits">
+          <number>8</number>
+         </property>
+         <property name="segmentStyle">
+          <enum>QLCDNumber::Flat</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="0" column="2">
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="0" column="1">
+        <widget class="QtSvgDialGauge" name="svgSpeedometer">
+         <property name="toolTip">
+          <string>An SVG button widget.</string>
+         </property>
+         <property name="whatsThis">
+          <string>An SVG button widget.</string>
+         </property>
+         <property name="skin">
+          <string>Tachometer</string>
+         </property>
+         <property name="maximum">
+          <number>10</number>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="DynoTab">
+     <attribute name="title">
+      <string>Dyno</string>
+     </attribute>
+    </widget>
+    <widget class="QWidget" name="DataTab">
+     <attribute name="title">
+      <string>Data</string>
+     </attribute>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -67,7 +133,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1000</width>
+     <width>1127</width>
      <height>21</height>
     </rect>
    </property>
